--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -40,8 +40,6 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -80,6 +78,9 @@
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -95,22 +96,13 @@
 						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="_validation_.html">"validation"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
