--- a/globals.html
+++ b/globals.html
@@ -40,8 +40,6 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -72,17 +70,15 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-external-module"><a href="modules/_condition_.html" class="tsd-kind-icon">"<wbr>Condition"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">"<wbr>Table<wbr>Schema"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_updateexpressionaction_.html" class="tsd-kind-icon">"<wbr>Update<wbr>Expression<wbr>Action"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">"batch<wbr>Helper"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_concurrenthelper_.html" class="tsd-kind-icon">"concurrent<wbr>Helper"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">"dynamo<wbr>DbReserved<wbr>Words"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">"index"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">"request<wbr>Builder"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_test_.html" class="tsd-kind-icon">"request<wbr>Builder.test"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">"request<wbr>Unwrapper"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_.html" class="tsd-kind-icon">"response<wbr>Unwrapper"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_test_.html" class="tsd-kind-icon">"response<wbr>Unwrapper.test"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_validation_.html" class="tsd-kind-icon">"validation"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_validation_test_.html" class="tsd-kind-icon">"validation.test"</a></li>
 							</ul>
 						</section>
 					</div>
@@ -102,6 +98,9 @@
 						<a href="modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_batchhelper_.html">"batch<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -117,22 +116,13 @@
 						<a href="modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="modules/_validation_.html">"validation"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
