--- a/interfaces/_tableschema_.tableschema.html
+++ b/interfaces/_tableschema_.tableschema.html
@@ -40,8 +40,6 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
-							<input type="checkbox" id="tsd-filter-only-exported" />
-							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -72,7 +70,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Describes the DynamoDB table structure and configures some settings.</p>
+						<p>Describes the DynamoDB table structure and configures settings.</p>
 					</div>
 				</div>
 			</section>
@@ -113,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">date<wbr>Serialization<wbr>Function<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L59">TableSchema.ts:59</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L60">TableSchema.ts:60</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -160,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">index<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L14">TableSchema.ts:14</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -175,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">partition<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L19">TableSchema.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L19">TableSchema.ts:19</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -190,7 +188,7 @@
 					<div class="tsd-signature tsd-kind-icon">partition<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L24">TableSchema.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L24">TableSchema.ts:24</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -205,7 +203,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L30">TableSchema.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L30">TableSchema.ts:30</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -221,7 +219,7 @@
 					<div class="tsd-signature tsd-kind-icon">sort<wbr>Key<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"string"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"number"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L36">TableSchema.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L36">TableSchema.ts:36</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -237,7 +235,7 @@
 					<div class="tsd-signature tsd-kind-icon">table<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L9">TableSchema.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -252,7 +250,7 @@
 					<div class="tsd-signature tsd-kind-icon">ttl<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L52">TableSchema.ts:52</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L53">TableSchema.ts:53</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -269,7 +267,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<wbr>Key<wbr>Field<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/TableSchema.ts#L45">TableSchema.ts:45</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3c62a43/src/TableSchema.ts#L46">TableSchema.ts:46</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -278,7 +276,8 @@
 								locking.  If set on an item, the type of the value must be <code>number</code>.
 								If set and the field is not on an item during a put then
 								there must not be an existing item in the table.  If set and the field
-							is present on an item then the existing value in the table must match.</p>
+								is present on an item during put/update/delete then the existing value in
+							the table must match.</p>
 						</div>
 					</div>
 				</section>
@@ -297,6 +296,9 @@
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_batchhelper_.html">"batch<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -312,22 +314,13 @@
 						<a href="../modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="../modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
 						<a href="../modules/_validation_.html">"validation"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
